--- a/package.json
+++ b/package.json
@@ -16,14 +16,11 @@
     "toastr": "^2.1.4"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
-    "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-cli": "^3.3.10"
   }
 }
