--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "toastr": "^2.1.4"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
