--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
   "name": "steam-treasure-parser-ext",
   "version": "1.0.0",
-  "description": "",
+  "description": "Extension to view the price of items in treasures",
   "main": "index.js",
   "scripts": {
     "start": "webpack -w",
     "build": "MODE=production webpack --mode production"
   },
-  "keywords": [],
-  "author": "SANTA2112",
+  "keywords": [
+    "steam parser",
+    "treasure parser",
+    "case parser",
+    "steam items price parser"
+  ],
+  "author": "SANTA2112 <s.yushmanov777@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "@types/toastr": "^2.1.37",
-    "axios": "^0.19.1",
+    "axios": "^0.19.2",
     "toastr": "^2.1.4"
   },
   "devDependencies": {
+    "@types/toastr": "^2.1.37",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.7.4",
+    "typescript": "^3.7.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   }
