--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,8 +12,9 @@
   "content_scripts": [
     {
       "matches": ["https://*.steamcommunity.com/market/listings/*"],
-      "js": ["script.js"],
+      "js": ["contentscript.js"],
       "run_at": "document_end"
     }
-  ]
+  ],
+  "web_accessible_resources": ["script.js"]
 }
