--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,12 +7,11 @@
   "extends": ["airbnb-base", "prettier", "plugin:prettier/recommended"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 12,
+    "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "prettier/prettier": ["error", { "printWidth": 120, "singleQuote": true, "trailingComma": "all" }],
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "error",
     "import/no-unresolved": "off",
@@ -34,6 +33,8 @@
     "no-await-in-loop": "off",
     "no-restricted-syntax": "off",
     "no-continue": "off",
+    "no-shadow": "off",
+    "@typescript-eslint/no-shadow": "error",
     "no-use-before-define": "off"
   }
 }
