--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "steam-treasure-parser-ext",
   "version": "1.0.0",
   "description": "Extension to view the price of items in treasures",
-  "main": "index.js",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "build": "MODE=production webpack --mode production"
+    "dev": "vite",
+    "build": "tsc && vite build"
   },
   "keywords": [
     "steam parser",
@@ -16,24 +18,21 @@
   "license": "ISC",
   "dependencies": {
     "date-fns": "^3.6.0",
-    "ky": "^0.33.2",
-    "toastr": "^2.1.4"
+    "ky": "^1.7.1",
+    "toastr": "^2.1.4",
+    "vite-plugin-css-injected-by-js": "^3.5.1"
   },
   "devDependencies": {
-    "@types/toastr": "^2.1.40",
+    "@types/node": "^22.5.0",
+    "@types/toastr": "^2.1.43",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
     "eslint": "^8.25.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "vite": "^5.4.2"
   }
 }
